deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webserver
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: my-webserver
  template:
    metadata:
      labels:
        app: my-webserver
    spec:
      containers:
        - name: my-webserver
          image: honorwizz/webserverhtml:latest 
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m" 
              memory: "128Mi" 
            limits:
              cpu: "500m" 
              memory: "256Mi" 
          livenessProbe:
            httpGet:
              path: /test.html
              port: 8000
            initialDelaySeconds: 3 
            periodSeconds: 5 
          readinessProbe:
            httpGet:
              path: /test.html
              port: 8000
            initialDelaySeconds: 2 
            periodSeconds: 3
