service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webserver-service
spec:
  selector:
    app: my-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
