ingress.yaml
#В моем случае не использовался
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-webserver.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-webserver-service
                port:
                  number: 80
